# flask_task

./: .env.sample  README.md  app.py  azure.yaml  requirements.txt  startup.sh
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml  pyproject.toml
azureproject/: development.py
configs/: development.py  production.py  testing.py
flask_tasks/: app.py  models.py
flask_tasks/endpoints/: tasks.py
infra/: main.bicep  resources.bicep
tests/: test.sqlite  test_task.py
