[tool.poetry]
name = "flask-task"
version = "0.0.1"
description = "Task REST API in Flask, deployable on Azure"
authors = ["Vito Minheere <vitominheere@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.11"
psycopg2 = "^2.9.7"
flask = "^3.0.0"
flask-sqlalchemy = "^3.1.1"
flask-migrate = "^4.0.5"
ruff = "^0.1.7"
flask-restful = "^0.3.10"
flasgger = "^0.9.7.1"
flask-httpauth = "^4.8.0"

[tool.ruff.lint]
select = ["D"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"